# CLoudKitchenEnv-pytorch-hackathon

./: Dockerfile  Readme.md  agent.py  app.py  baseline.py  inference.py  openenv.yml  pyproject.toml  tasks.py
env/: environment.py  models.py
server/: app.py
