[project]
name = "cloud-kitchen-env"
version = "0.1.0"
description = "Cloud Kitchen Reinforcement Learning Environment"
authors = [
    { name = "Monu Mandal" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"